css/team.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800&display=swap');
* {
  padding: 0;
  margin: 0;
  overflow-x: hidden;

}




body {
  background-color: #070707;
background-image: url(../images/45-degree-fabric-dark.png);
  font-family: "raleway", sans-serif;
  

}
.hamburger{
  top: 1.5px;
}
.container {
  margin: 20px 40px;
  color: white;
  align-items: center;
  
}

.heading {
  font-size: 40px;
  color:#FF9933;
//  text-align: center;
  padding: 10px;
}
.heading-1{
  font-size: 60px;
  color: white;
//  text-align: center;
  padding-top: 50px;
}

.profiles {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr 1fr ;
  grid-gap:15px;
  margin: 20px 80px;
  align-items: center;
  
  
  
}
.profiles-partners {
  display:grid;
  grid-template-columns: 1fr 1fr 1fr  ;
  grid-gap:25px;
  margin: 20px 80px;
  
  
  
}

.profile {
  flex-basis: 220px;

}

.profile .profile-img {
  height: 220px;
  width: 220px;
  border-radius: 50%;
  filter: grayscale(100%);
  cursor: pointer;
  transition: 400ms;
}
.profile .profile-img-partners {
  height: 240px;
  width: 240px;
    cursor: pointer;
    transition: 400ms;
  }

.profile:hover .profile-img {
  filter: grayscale(0);
}

.user-name {
  margin-top: 30px;
  font-size: 20px;
  
}

.profile h5 {
  font-size: 16px;
  font-weight: 100;
  letter-spacing: 3px;
  color: #ff9933ab;
  padding: 5px;
}
.fa{
  color:white;
  font-size: 25px;
  opacity: 0;
  padding: 10px;
}
.profile:hover .fa{
  opacity: 1;
}

@media only screen and (max-width: 1150px) {
  .profiles {
    flex-direction: column;
  }

  .profile {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  .profile p {
    text-align: center;
    margin: 20px 60px 80px 60px;
    font-size: 20px;
  }
}

@media screen and (max-width:600px){
  
    
  .profiles{
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;
      margin-left: 16%;
      
  }
  .profiles-partners{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-left: 16%;
    
}
  .heading {
    font-size: 30px;
    color: white;
    text-align: center;
    padding: 5%;
    color: #FF9933;
    margin-left: -9%;
  }

  .profile p {
    margin: 20px 10px 80px 10px;
  }
  .heading-1{
    font-size: 35px;
    padding-top: 15%;
    padding-bottom: 5%;
    margin-left: -9%;
    
  }

  .user-name {
    margin-top: 20px;
    font-size: 15px;
  }

  .profile .profile-img {
    height: 180px;
    width: 180px;
    border-radius: 50%;
    filter: grayscale(100%);
    cursor: pointer;
    transition: 400ms;
  }

  .container {
    margin: 16px 20px;
    color: white;
    align-items: center;
    max-width: 100vw;
  }
  .profile .profile-img-partners {
    height: 180px;
    width: 180px;
      cursor: pointer;
      transition: 400ms;
      z-index: 50000;
    }
  

  

}

